28/10/2015 1.0.1.1

    user visible changes, client:
    * unwtarring is done specifically to each .wtar file. No more unwtarring whole folders.

    programmer visible changes:
    * ConfigVarStack.add_const_config_variable: added normalization of paths for windows.

26/10/2015 1.0.1.0

    user visible changes, client:
    * Improved unwtar, no more done files, more robust algorithm, better catching and reporting of errors
    * Interactive mode: better help for depend

23/10/2015 1.0.0.9

    user visible changes, admin:
    * New interactive command: 'apropos' searches for index items, guids and params.
    * New interactive command: 'common' lists all common needs/needed-by index items for a given list of items.

22/10/2015 1.0.0.8

    user visible changes, client:
    * Print all running processes when batch file exits on non zero

    programmer visible changes:
    * normpath for the following variables to avoid bad slashes on windows"__SITE_DATA_DIR__, __SITE_CONFIG_DIR__, __USER_DATA_DIR__, __USER_CONFIG_DIR__, __USER_HOME_DIR__

20/10/2015 1.0.0.7
    user visible changes, client:
    * Fixed const variables ending with ("_PATH", "_DIR", "_DIR_NAME", "_FILE_NAME", "_PATH__", "_DIR__", "_DIR_NAME__", "_FILE_NAME__")
        were not normalized (Win)


19/10/2015 1.0.0.6

    user visible changes, client:
    * Added check after mkdir and cd on Windows
    * Check checksum for already synced files, to overcome possible file corruption.
    * Added messages for already synced files that need sync or unsynced file that do not need sync
    * Exit batch file if uwtar failed

    programmer visible changes:
    * Fixed missing import in instlAdmin.py
    * PlatformSpecificHelperWin.exit_if_any_error will exit on any zero exit code

18/10/2015 1.0.0.5

    user visible changes, client:
    * Finding cookie for url by domain is now case insensitive

14/10/2015 1.0.0.4

 user visible changes, client:
 * Support for cookies per domain with variable COOKIE_JAR